--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start"
   },
   "keywords": [],
-  "author": "",
+  "author": "Woogi",
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.0.5",
@@ -23,12 +23,13 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "sass": "^1.26.7"
+    "sass": "^1.26.7",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "nodemon": "^2.0.2",
