--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "antd": "^4.2.3",
     "axios": "^0.19.2",
     "next": "^9.4.4",
-    "next-redux-wrapper": "^5.0.0",
+    "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "sass": "^1.26.7",
     "styled-components": "^5.1.1"
