--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2020,
         "sourceType": "module",
@@ -12,12 +13,16 @@
         "es6": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
+        "airbnb"
     ],
     "plugins": [
         "import",
-        "react-hooks"
+        "react-hooks",
+        "jsx-a11y"
     ],
-    "rules": {}
+    "rules": {
+        "no-underscore-dangle": "off",
+        "react/forbid-prop-types": "off",
+        "object-curly-newline": "off"
+    }
 }
