--- a/.eslintrc
+++ b/.eslintrc
@@ -21,8 +21,15 @@
         "jsx-a11y"
     ],
     "rules": {
+        "jsx-a11y/label-has-associated-control": "off",
+        "jsx-a11y/anchor-is-valid": "off",
+        "no-console": "off",
         "no-underscore-dangle": "off",
         "react/forbid-prop-types": "off",
-        "object-curly-newline": "off"
+        "react/jsx-filename-extension": "off",
+        "react/jsx-one-expression-per-line": "off",
+        "object-curly-newline": "off",
+        "linebreak-style": "off",
+        "no-param-reassign": "off"
     }
 }
