--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
         "react/jsx-one-expression-per-line": "off",
         "object-curly-newline": "off",
         "linebreak-style": "off",
-        "no-param-reassign": "off"
+        "no-param-reassign": "off",
+        "no-unused-expressions": "off"
     }
 }
