--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "^4.0.5",
     "antd": "^4.2.3",
     "axios": "^0.19.2",
+    "immer": "^7.0.5",
     "next": "^9.4.4",
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^6.0.2",
