--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "^4.0.5",
     "antd": "^4.2.3",
     "axios": "^0.19.2",
+    "faker": "^4.1.0",
     "immer": "^7.0.5",
     "next": "^9.4.4",
     "next-redux-saga": "^4.1.2",
@@ -28,6 +29,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "sass": "^1.26.7",
+    "shortid": "^2.2.15",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
