--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "^4.0.5",
     "antd": "^4.6.1",
     "axios": "^0.19.2",
+    "babel-plugin-styled-components": "^1.11.1",
     "faker": "^4.1.0",
     "immer": "^7.0.5",
     "moment": "^2.27.0",
