--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "ANALYZE=true NODE_ENV=production next build",
     "start": "next start"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.0.5",
+    "@next/bundle-analyzer": "^9.5.3",
     "antd": "^4.6.1",
     "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.11.1",
