--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux-saga": "^1.1.3",
     "sass": "^1.26.7",
     "shortid": "^2.2.15",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "swr": "^0.3.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
