--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "babel-plugin-styled-components": "^1.11.1",
     "faker": "^4.1.0",
     "immer": "^7.0.5",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "next": "^9.4.4",
     "next-redux-wrapper": "^6.0.2",
+    "passport-jwt": "^4.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
