--- a/package.json
+++ b/package.json
@@ -8,21 +8,7 @@
     "build": "ANALYZE=true NODE_ENV=production next build",
     "start": "next start",
     "jest": "jest",
-    "testwatch": "jest --watchAll"
-  },
-  "jset": {
-    "setupFiles": [
-      "./setupTest.js"
-    ],
-    "moduleNameMapper": {
-      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
-    },
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/"
-    ]
+    "test:watch": "jest --watchAll"
   },
   "keywords": [],
   "author": "Woogi",
@@ -69,6 +55,7 @@
     "jest": "^26.6.1",
     "nodemon": "^2.0.2",
     "react-test-renderer": "^17.0.1",
+    "redux-mock-store": "^1.5.4",
     "webpack": "^4.42.1"
   }
 }
