--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.1",
+    "nock": "^13.0.4",
     "nodemon": "^2.0.2",
     "react-test-renderer": "^17.0.1",
     "redux-mock-store": "^1.5.4",
