--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
-    "start": "next start -p 3060",
+    "build": "ANALYZE=true NODE_ENV=test next build",
+    "start": "NODE_ENV=test next start -p 3060",
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
