--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next",
     "build": "ANALYZE=true NODE_ENV=production next build",
-    "start": "NODE_ENV=production next start -p 3060",
+    "start": "NODE_ENV=production next start",
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
