--- a/docker/conf.d/nginx.conf
+++ b/docker/conf.d/nginx.conf
@@ -1,20 +1,19 @@
 server {
-        server_name futchall.com;
-        location / {
-                proxy_set_header HOST $host;
-                proxy_pass http://127.0.0.1:3060;
-        }
-        listen 443 ssl;
-        ssl_certificate /etc/letsencrypt/live/futchall.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/futchall.com/privkey.pem;
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-}
-server {
-        if ($host = futchall.com) {
-                return 301 https://$host$request_uri;
-        }
-        server_name futchall.com;
-        listen 80;
-        return 404;
+    listen              443 ssl;
+    server_name         futchall.com;
+    ssl_certificate     /etc/letsencrypt/live/futchall.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/futchall.com/privkey.pem;
+
+    location / {
+        proxy_pass http://nextjs:3060;
+        proxy_http_version 1.1;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        fastcgi_buffers 8 16k;
+        fastcgi_buffer_size 32k;
+        fastcgi_connect_timeout 60;
+        fastcgi_send_timeout 300;
+        fastcgi_read_timeout 300;
+    }
 }
