--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
 version: '3'
 services:
+  nextjs: 
+      build: ./
+      restart: unless-stopped
   proxy:
       restart: unless-stopped
       image: staticfloat/nginx-certbot
       ports:
-          - 80:80/tcp
-          - 443:443/tcp
+          - 80:80
+          - 443:443
       environment:
           CERTBOT_EMAIL: dnrlwo11@gmail.com
       volumes:
         - ./docker/conf.d:/etc/nginx/user.conf.d:ro
         - letsencrypt:/etc/letsencrypt
-  nextjs: 
-      build: ./
 volumes:
     letsencrypt:
