--- a/docker/conf.d/nginx.conf
+++ b/docker/conf.d/nginx.conf
@@ -5,7 +5,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/futchall.com/privkey.pem;
 
     location / {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://localhost:3000;
         proxy_http_version 1.1;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
