--- a/docker/conf.d/nginx.conf
+++ b/docker/conf.d/nginx.conf
@@ -1,3 +1,8 @@
+upstream futchall {
+    least_conn;
+    server futchall_nextjs_1:3001 weight=5 max_fails=3 fail_timeout=10s;
+    server futchall_nextjs_2:3002 weight=10 max_fails=3 fail_timeout=10s;
+}
 server {
     listen              443 ssl;
     server_name         futchall.com;
@@ -5,7 +10,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/futchall.com/privkey.pem;
 
     location / {
-        proxy_pass http://futchall_nextjs_1:3000;
+        proxy_pass http://futchall;
         proxy_http_version 1.1;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
