--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ANALYZE=true NODE_ENV=production next build",
     "start": "NODE_ENV=production next start",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "test:cypress": "cypress open"
   },
   "keywords": [],
   "author": "Woogi",
@@ -41,6 +42,7 @@
     "@babel/preset-react": "^7.12.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.1",
+    "cypress": "^6.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
